Trying to fix link resolution on titles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Home
         <li class="table-row">
             <div class="table-cell">
                 <a href="{{ post.url }}">
-                    {{ post.author }} {% if post.title %}{{ post.title }}{% endif %}
+                    {{ post.author }} — {{ post.title }}
                 </a>
             </div>
             {% if post.kind %}
