--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Home
         {% unless post.reference or post.kind == "reference" %}
         <li class="table-row">
             <div class="table-cell">
-                <a href="{{ site.baseurl }}/{{ post.url }}">
+                <a href="{{ site.baseurl }}{{ post.url }}">
                     {{ post.author }} — {{ post.title }}
                 </a>
             </div>
