--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Home
         <li class="table-row">
             <div class="table-cell">
                 <a href="{{ post.url }}">
-                    {{ post.author }}{% unless post.author == post.title %} — {{ post.title }}{% enduless %}
+                    {{ post.author }}{% unless post.author == post.title %} — {{ post.title }}{% endunless %}
                 </a>
             </div>
             {% if post.kind %}
