--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Home
+kind: "reference"
 ---
 
 <p>{{ site.description }}</p>
@@ -32,7 +33,7 @@ title: Home
         <li class="table-row">
             <div class="table-cell">
                 <a href="{{ post.url }}">
-                    {{ post.author }}{% unless post.author == post.title %} — {{ post.title }}{% endunless %}
+                    {{ post.author }}{% unless post.author == post.title%} — {{ post.title }}{% endunless %}
                 </a>
             </div>
             {% if post.kind %}
